# OpenChimera_v1

./: .bandit  .dockerignore  .env.example  .env.production.example  .env.secrets  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  ANTHROPIC_VULNERABILITY_REPORT.md  AREAL_INTEGRATION.md  AUDIT_REPORT.md  AUTHORS.md  BUILDING.md  BUILDING_RUST.md  CAPABILITIES.md  CAPABILITIES_ROADMAP.md  CHANGELOG.md  CHIMERA_AUTORUN_SETUP.txt  CHIMERA_LOCAL_LLM_PLAN.md  CHIMERA_LOCAL_SETUP_COMPLETE.md  CHIMERA_RUN_REPORT.md  CHIMERA_SIMPLE_README.md  CLAUD.md  CLAUDE.md  CLAUDE_OPENCLAW_OPENCHIMERA_COMPARISON.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FINAL_RESEARCH_REPORT.md  GITHUB_SCOUT_REPORT.md  HF_DEPLOY.md  IDENTITY.md  LEGACY_INTEGRATIONS.md  MANIFEST.in  OPENCLAW_COMPARISON.md  PC_ANALYSIS_AND_D_DRIVE_MIGRATION_PLAN.md  PHASE_COMPLETION_REPORT.md  PROJECT_COMPLETE.md  (+121 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  evolution-memory.json  pull_request_template.md
cctv_vision/: audio_out.py  main.py  port_scanner.py  vision_sentinel.py
chimera-core/: Cargo.toml
chimera-core/migrations/: 0001_initial.sql  0002_episodic_memory.sql  0004_goal_planner.sql
chimera-core/src/: lib.rs
chimera-core/src/bus/: mod.rs
chimera-core/src/db/: mod.rs
chimera-core/src/fim/: mod.rs
chimera-core/src/router/: mod.rs
chimeralang-mcp-release/: HOW_TO_RELEASE.md  integration_test.py  v0.2.0.patch
config/: god_swarm_agents.json  model_role_assignments.json  release_validation_modules.txt  runtime_profile.json  runtime_profile.local.example.json  social_norms.json  subsystems.json  world_model_nodes.json
core/: _bus_fallback.py  _database_fallback.py  activation_plane.py  active_inquiry.py  aegis_service.py  aether_service.py  agent_coordinator.py  agent_pool.py  api_docs.py  api_server.py  ascension_service.py  auth.py  autonomy.py  autonomy_plane.py  bootstrap.py  bootstrap_plane.py  browser_service.py  bus.py  capabilities.py  capability_plane.py  causal_reasoning.py  chimera_bridge.py  cloud_auth.py  command_registry.py  config.py  configure_wizard.py  consensus_plane.py  control_plane.py  credential_store.py  database.py  deliberation.py  deliberation_engine.py  embodied_interaction.py  ethical_reasoning.py  evo_service.py  evolution.py  fim_daemon.py  goal_planner.py  hardware_detector.py  harness_port.py  (+60 more)
dist_sim/: __init__.py  cluster.py  cognitive_scenarios.py  harness.py  multi_agent_scenarios.py  node.py  scenarios.py
docs/: DASHBOARD_PLAN.md  api-reference.md  architecture.md  development.md
e2e/: package.json  playwright.config.js
logs/: vram_stress_log.txt
openchimera/: __init__.py  agent_pool.py  api_server.py  causal_reasoning.py  chimera_bridge.py  cli.py  config.py  deliberation.py  embodied_interaction.py  ethical_reasoning.py  evolution.py  goal_planner.py  kernel.py  knowledge_base.py  memory.py  meta_learning.py  metacognition.py  orchestrator.py  plan_mode.py  provider.py  quantum_engine.py  query_engine.py  safety_layer.py  self_model.py  session_memory.py  social_cognition.py  transfer_learning.py  world_model.py
plugins/: __init__.py  openchimera-core.json  summarizer.json  web-search.json
rust_build/: Cargo.toml  pyproject.toml
rust_build/src/: lib.rs
sandbox/: install_simulation.py
scripts/: __init__.py  auto_llm_integrator.py  auto_llm_scout.py  benchmark_llm.py  checkpoint_manager.py  chimeralang_mcp_local.py  claude_worktree_wrapper.py  constitutional_validator.py  debate_protocol.py  evolution_engine.py  expert_router.py  finalize_prometheus.py  gateway_restart.py  generate_missing_skills.py  github_scout.py  install-openchimera-task.ps1  interpretability_monitor.py  mcp_manager.py  minimind_model_tools.py  quantum_sim_verify.py  reasoning_wrapper.py  remove-openchimera-task.ps1  restore-environment.ps1  run-quality-gate.ps1  run-quality-gate.sh  self_evolution_cycle.py  start-openchimera.ps1  swarm_controller.ts  token_optimizer.ts  verify_migrations.py  vram_balancer.py  worktree_manager.py
senses/: predictive_engine.py
services/: __init__.py  hook_pipeline.py  plan_mode.py  session_compactor.py
skills/: __init__.py
swarms/: GOD_SWARM.md  GOD_SWARM_GUIDE.md  SWARM_ARCHITECTURES.md  SWARM_GUIDE.md  __init__.py  agent.py  god_swarm.py  orchestrator.py  result.py
tests/: test_activation_plane.py  test_active_inquiry_bus.py  test_advanced_capabilities.py  test_aether_service.py  test_agent_pool.py  test_agi_complete_loop.py  test_agi_completeness.py  test_agi_sandbox_simulation.py  test_api_contract.py  test_api_docs_dashboard.py  test_ascension_service.py  test_audit_system.py  test_autonomy.py  test_autonomy_plane.py  test_backup_restore.py  test_bootstrap.py  test_bootstrap_plane.py  test_browser_service.py  test_bus.py  test_capabilities.py  test_capability_plane.py  (+87 more)
(+134 files in other folders)
