[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openchimera"
version = "0.1.0"
description = "Local-first LLM orchestration runtime with multi-model routing, autonomy scheduling, and MCP integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"networkx>=3.0,<4",
	"numpy>=1.24,<3",
	"psutil>=5.9,<8",
	"pydantic>=2.12,<3",
]

[project.optional-dependencies]
redis = [
	"redis[hiredis]>=5.0,<8",
]
dev = [
	"build>=1.2,<2",
	"pytest-asyncio>=0.21,<1",
	"wheel>=0.45,<1",
	"pip-tools>=7.5,<8",
]

[project.scripts]
openchimera = "run:main"

[tool.setuptools]
include-package-data = false
py-modules = ["run"]

[tool.setuptools.package-data]
core = ["migrations/*.sql"]

[tool.setuptools.packages.find]
include = ["core*", "openchimera*", "sandbox*", "services*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 90
python_classes = ["Test*"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
