[package]
name = "chimera-core"
version = "0.1.0"
edition = "2021"
description = "High-performance core subsystems for OpenChimera (Rust)"

[lib]
name = "chimera_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py311"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "macros"] }
notify = "6"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[features]
extension-module = ["pyo3/extension-module"]
